# AzureSDKForRust

./: .gitignore  CHANGELOG.md  Cargo.toml  index.html  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
azure_sdk_for_rust/: index.html
azure_sdk_for_rust/azure/: index.html
azure_sdk_for_rust/azure/core/: enum.HTTPMethod.html  fn.canonicalize_header.html  fn.canonicalized_resource.html  fn.encode_str_to_sign.html  fn.generate_authorization.html  fn.perform_request.html  (+21 more)
hyper/header/: struct.HeadersItems.html
hyper/net/: struct.NetworkConnections.html
num/iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
regex/: enum.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
serde/iter/: struct.LineColIterator.html
src/: lib.rs  main.rs
src/azure_sdk_for_rust/: lib.rs.html
src/xml/: element.rs.html  element_builder.rs.html  lib.rs.html  parser.rs.html
unicode_normalization/: struct.Decompositions.html  struct.Recompositions.html
xml/: enum.BuilderError.html  enum.Event.html  enum.Xml.html  fn.escape.html  fn.unescape.html  index.html  struct.ChildElements.html  struct.Element.html  struct.ElementBuilder.html  struct.EndTag.html  struct.Parser.html  struct.ParserError.html  struct.StartTag.html
(+170 files in other folders)
